expected/main/gens/primAt-neg-32.err
ERROR: "actual/main/gens/primAt-neg-32.lc", line 7
external bad0 {primAt 0}       :: Ref (Array 8 SW) -> Ix 8 -> Ref SW
         ^
Generator primAt requires 2 arguments

ERROR: "actual/main/gens/primAt-neg-32.lc", line 8
external bad1 {primAt Word}    :: Ref (Array 8 SW) -> Ix 8 -> Ref SW
         ^
Generator primAt requires 2 arguments

ERROR: "actual/main/gens/primAt-neg-32.lc", line 11
external bad4 {primAt 4 Word}  :: Ref (Array 4 SW) -> Ix 4 -> Ref SW
         ^
Generator argument 2 (Word) does not have expected kind (area)

ERROR: "actual/main/gens/primAt-neg-32.lc", line 12
external bad5 {primAt 4G Word} :: Ref (Array 4G SW) -> Ix 4G -> Ref SW
         ^
Generator argument 2 (Word) does not have expected kind (area)

ERROR: "actual/main/gens/primAt-neg-32.lc", line 6
entrypoint bad0, bad1, bad2, bad3, bad4, bad5
^
"bad0" is not in scope

ERROR: "actual/main/gens/primAt-neg-32.lc", line 6
entrypoint bad0, bad1, bad2, bad3, bad4, bad5
^
"bad1" is not in scope

ERROR: "actual/main/gens/primAt-neg-32.lc", line 6
entrypoint bad0, bad1, bad2, bad3, bad4, bad5
^
"bad4" is not in scope

ERROR: "actual/main/gens/primAt-neg-32.lc", line 6
entrypoint bad0, bad1, bad2, bad3, bad4, bad5
^
"bad5" is not in scope

ERROR: Aborting after 8 previously reported errors

